# cppring

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: main.cpp
